--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
 	<h1>Este es el Index</h1>
+	<form action="/guardar_user" method="POST">
+		<label for="name">Nombre</label>
+		<input type="text" name="name">
+		<label for="apellido">Apellido</label>
+		<input type="text" name="apellido">
+		<label for="email">Email</label>
+		<input type="email" name="email">
+		<label for="password">Contraseña</label>
+		<input type="password" name="password">
+		<input type="submit" value="Enviar">
+	</form>
 </body>
 </html>
