--- a/src/templates/karen.html
+++ b/src/templates/karen.html
@@ -1,7 +1,117 @@
-{% extends './layout.html' %}
-{% block titulo %}
-Name de la biografia
-{% endblock %}
-{% block body %}
-<h1>Aca el nombre</h1>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Karen</title>
+  <!-- CDN de Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body>
+  <div>
+
+  </div>
+  <div class="bg-clip-border p-2 bg-slate-50 pt-6 md:p-8 text-center md:text-center space-y-4 dark:text-sky-900  ">
+    <h1 class="text-lg font-medium  text-3xl ">Bienvenidos a mí bibliografía </h1>
+  </div>
+  <figure class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-100">
+    <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto"
+      src="{{url_for('static', filename='./img/karen/Foto.jpeg')}}" alt="" width="384" height="512">
+    <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
+      <blockquote>
+        <p class="text-lg font-medium">
+          “Descripción del estudiante”
+        </p>
+      </blockquote>
+      <figcaption class="font-medium">
+        <div class="text-sky-500 dark:text-gray-800">
+          Karen Yised Maldonado Rincón
+        </div>
+        <div class="text-slate-700 dark:text-slate-500">
+          Estudiante de Ingenería de Sistemas, Noveno Semestre.
+        </div>
+      </figcaption>
+    </div>
+  </figure>
+
+  <br>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 w-full">
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/karen/mia3.jpeg')}}" alt="niñez" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          Niñez
+        </h3>
+        <ul class="space-y-4">
+          <p class="mt-4 text-base md:text-lg text-gray-600">
+            Nací el 22 de junio del 2001, Entre al jardín a los cuatro años, era un poco terca y de un carácter fuerte,
+            me gustaba el futbol y pintar. En el colegio siempre me fue muy bien.
+          </p>
+      </div>
+    </div>
+
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/karen/mia2.jpeg')}}"
+        alt="adolescencia" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          Adolescencia
+        </h3>
+
+        <ul class="space-y-4">
+          <p class="mt-4 text-base md:text-lg text-gray-600">
+            Me enfoqué en estudiar mucho y siempre fui muy aplicada, entrene baloncesto, fui a muchas competencias, en
+            decimo grado hice mis primeros amigos y finalmente me gradué en 2017
+
+          </p>
+
+      </div>
+    </div>
+
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/karen/mia1.jpeg')}}"
+        alt="pasatiempos" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          Pasatiempos
+        </h3>
+
+        <ul class="space-y-4">
+          <p class="mt-4 text-base md:text-lg text-gray-600">
+            Uno de mis pasatiempos favoritos es montar bicicleta, hacer rutas y olvidarme del mundo por algunas horas,
+            me gusta patinar con mis compañeros de trabajo y demás compañeros de dicha actividad, me gusta cantar y
+            dibujar. Otro de mis pasatiempos favoritos es cocinar y escuchar música de todo tipo. Me encanta la
+            literatura reflexiva y de suspenso, pero debo admitir que las novelas románticas y las películas dramáticas
+            me mueven el corazón y la vida de una forma genial. Dormir con mi gato definitivamente es lo único que
+            espero siempre al volver casa.
+
+      </div>
+    </div>
+
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/karen/mia4.jpeg')}}" alt="Metas" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          Metas
+        </h3>
+
+        <ul class="space-y-4">
+          <p class="mt-4 text-base md:text-lg text-gray-600">
+            Mi meta a corto plazo es graduarme de la universidad, empezar a buscar trabajo y ayudar a mi familia, mi
+            única meta en la vida es ser feliz y hacer feliz a mi madre, cueste lo que cueste.
+            ¡Que miedo estar haciendo algo por ultima vez y no saberlo!
+
+          </p>
+      </div>
+    </div>
+  </div>
+
+</html>
