--- a/src/templates/karen.html
+++ b/src/templates/karen.html
@@ -23,7 +23,7 @@
     <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
       <blockquote>
         <p class="text-lg font-medium">
-          “Descripción del estudiante”
+          Líder, deportista y la jefa de jefas!!
         </p>
       </blockquote>
       <figcaption class="font-medium">
