boton de volver

--- a/src/templates/juan.html
+++ b/src/templates/juan.html
@@ -46,8 +46,10 @@
 				</h3>
 				<ul class="space-y-4">
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Naci en Ubate cundinamarca en el año 2000, me gustaba jugar mucho y segun era muy canson,y tampoco no me gustaba comer mucho.
-						Entre a la escuela a los 5 años, practicaba el futbol y desde entonces le tengo mucho aprecio a este deporte.
+						Naci en Ubate cundinamarca en el año 2000, me gustaba jugar mucho y segun era muy canson,y tampoco no
+						me gustaba comer mucho.
+						Entre a la escuela a los 5 años, practicaba el futbol y desde entonces le tengo mucho aprecio a este
+						deporte.
 					</p>
 			</div>
 		</div>
@@ -60,12 +62,15 @@
 				</h3>
 				<ul class="space-y-4">
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Fui al colegio en Carmen de Carupa, era un buen estudiante, "Eso creo", segui practicando el futbol , micro futbol
-						pero tuve una lesion en la rodilla, segui jugando y en continuidad de 3 años me lesione y no volvi a practicarlo.
+						Fui al colegio en Carmen de Carupa, era un buen estudiante, "Eso creo", segui practicando el futbol ,
+						micro futbol
+						pero tuve una lesion en la rodilla, segui jugando y en continuidad de 3 años me lesione y no volvi a
+						practicarlo.
 						Me gradue a los 17 años del colegio, luego ingrese a la universidad a estudiar Ingenieria de Sistemas.
 					</p>
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Conoci unos muy buenos amigos y mi novia ♥️ , "Los mejores", y aun aqui estamos todos juntos tratando de aprender algo nuevo
+						Conoci unos muy buenos amigos y mi novia ♥️ , "Los mejores", y aun aqui estamos todos juntos tratando
+						de aprender algo nuevo
 						y poder terminar la carrera a tiempo.
 					</p>
 			</div>
@@ -79,7 +84,8 @@
 				</h3>
 				<ul class="space-y-4">
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Mis pasatiempos favoritos es compartir con amigos, Viajar con mi novia, conocer nuevos lugares, pueblitos.
+						Mis pasatiempos favoritos es compartir con amigos, Viajar con mi novia, conocer nuevos lugares,
+						pueblitos.
 						Me gusta mucho escuchar musica, ver futbol (Ya no lo practico pero disfruto viendolo),
 						tambien jugar video juegos, ver peliculas, cocinar.
 						Y en general veo mucho ocntenido multimedia, que me contribuye a aprender nuevas cosas.
@@ -95,15 +101,39 @@
 				</h3>
 				<ul class="space-y-4">
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Mis metas es poder graduarme de la universidad, y poder trabajar en un rol como desarrollador de software.
+						Mis metas es poder graduarme de la universidad, y poder trabajar en un rol como desarrollador de
+						software.
 						Ayudar a mi familia en lo que requieran.
 						Seguir viajando y conocer muchos lugares.
 					</p>
 					<p class="mt-4 text-base md:text-lg text-gray-600">
-						Y algo primordial, nunca dejar de aprender. "Esto es algo que aprendi con la posibilidad de estudiar en Platzi 💚"
+						Y algo primordial, nunca dejar de aprender. "Esto es algo que aprendi con la posibilidad de estudiar
+						en Platzi 💚"
 					</p>
 			</div>
 		</div>
 	</div>
+<form>
+	<input type="button" class="atras" id="atras" value="Volver" onclick="history.back()">
+	<style>
+		input {
+			text-decoration: none;
+			display: inline-block;
+			padding: 8px 16px;
+			background-color: rgb(117, 137, 230);
+			color: black;
+			border-radius: 12px;
+		}
 
+		input:hover {
+			background-color: rgb(54, 63, 104);
+			color: rgb(253, 253, 253);
+		}
+
+		.atras {
+			background-color: #6078bb;
+			color: black;
+		}
+	</style>
+</form>
 </html>
