--- a/src/templates/karen.html
+++ b/src/templates/karen.html
@@ -113,5 +113,27 @@
       </div>
     </div>
   </div>
+<form>
+  <input type="button" class="atras" id="atras" value="Volver" onclick="history.back()">
+  <style>
+    input {
+      text-decoration: none;
+      display: inline-block;
+      padding: 8px 16px;
+      background-color: rgb(117, 137, 230);
+      color: black;
+      border-radius: 12px;
+    }
 
+    input:hover {
+      background-color: rgb(54, 63, 104);
+      color: rgb(253, 253, 253);
+    }
+
+    .atras {
+      background-color: #6078bb;
+      color: black;
+    }
+  </style>
+</form>
 </html>
