--- a/src/templates/yadir.html
+++ b/src/templates/yadir.html
@@ -170,13 +170,32 @@
             viajar a diversos lugares del país junto a mi familia y pareja, apoyar a mis padres cuando lo requieran,
             tener diversas experiencias laborales que me permitan mejorar mi capacidad profesional, montar un
             emprendimiento basado en intereses de mis conocimientos.
-
-
-
           </p>
         </ul>
       </div>
     </div>
   </div>
+<form>
+  <input type="button" class="atras" id="atras" value="Volver" onclick="history.back()">
+  <style>
+    input {
+      text-decoration: none;
+      display: inline-block;
+      padding: 8px 16px;
+      background-color: rgb(117, 137, 230);
+      color: black;
+      border-radius: 12px;
+    }
 
+    input:hover {
+      background-color: rgb(54, 63, 104);
+      color: rgb(253, 253, 253);
+    }
+
+    .atras {
+      background-color: #6078bb;
+      color: black;
+    }
+  </style>
+</form>
 </html>
