--- a/src/templates/emerson.html
+++ b/src/templates/emerson.html
@@ -18,8 +18,8 @@
     <h1 class="text-lg font-medium  text-3xl ">Bienvenidos a mí bibliografía </h1>
   </div>
   <figure class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-100">
-    <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="{{url_for('static', filename='./img/emerson/Foto1.jpg')}}" alt="" width="384"
-      height="512">
+    <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto"
+      src="{{url_for('static', filename='./img/emerson/Foto1.jpg')}}" alt="" width="384" height="512">
     <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
       <blockquote>
         <p class="text-lg font-medium">
@@ -41,7 +41,8 @@
 
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 w-full">
     <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
-      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia4.jpg')}}" alt="niñez" />
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia4.jpg')}}"
+        alt="niñez" />
 
       <div class="relative p-4">
         <h3 class="text-base md:text-xl font-medium text-gray-800">
@@ -56,7 +57,8 @@
     </div>
 
     <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
-      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia2.jpg')}}" alt="adolescencia" />
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia2.jpg')}}"
+        alt="adolescencia" />
 
       <div class="relative p-4">
         <h3 class="text-base md:text-xl font-medium text-gray-800">
@@ -74,7 +76,8 @@
     </div>
 
     <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
-      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia1.jpg')}}" alt="pasatiempos" />
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia1.jpg')}}"
+        alt="pasatiempos" />
 
       <div class="relative p-4">
         <h3 class="text-base md:text-xl font-medium text-gray-800">
@@ -90,7 +93,8 @@
     </div>
 
     <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
-      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia3.jpg')}}" alt="Metas" />
+      <img class="object-cover w-full h-48" src="{{url_for('static', filename='./img/emerson/mia3.jpg')}}"
+        alt="Metas" />
 
       <div class="relative p-4">
         <h3 class="text-base md:text-xl font-medium text-gray-800">
@@ -106,28 +110,30 @@
           </p>
       </div>
     </div>
+    <form>
+      <input type="button" class="atras" id="atras" value="Volver" onclick="history.back()">
+      <style>
+        input {
+          text-decoration: none;
+          display: inline-block;
+          padding: 8px 16px;
+          background-color: rgb(117, 137, 230);
+          color: black;
+          border-radius: 12px;
+        }
+
+        input:hover {
+          background-color: rgb(54, 63, 104);
+          color: rgb(253, 253, 253);
+        }
+
+        .atras {
+          background-color: #6078bb;
+          color: black;
+        }
+      </style>
+    </form>
   </div>
-<form>
-  <input type="button" class="atras" id="atras" value="Volver" onclick="history.back()">
-  <style>
-    input {
-      text-decoration: none;
-      display: inline-block;
-      padding: 8px 16px;
-      background-color: rgb(117, 137, 230);
-      color: black;
-      border-radius: 12px;
-    }
+</body>
 
-    input:hover {
-      background-color: rgb(54, 63, 104);
-      color: rgb(253, 253, 253);
-    }
-
-    .atras {
-      background-color: #6078bb;
-      color: black;
-    }
-  </style>
-</form>
 </html>
