--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Biografias</title>
+  <!-- CDN de Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+
 <body>
-	<h1>Este es el Index</h1>
-	<form action="/guardar_user" method="POST">
-		<label for="name">Nombre</label>
-		<input type="text" name="name">
-		<label for="apellido">Apellido</label>
-		<input type="text" name="apellido">
-		<label for="email">Email</label>
-		<input type="email" name="email">
-		<label for="password">Contraseña</label>
-		<input type="password" name="password">
-		<input type="submit" value="Enviar">
-	</form>
-	<a href="/yadir">Yadir Yomayuza</a>
-	<a href="/emerson">Emerson Pachon</a>
-	<a href="/andres">Andres Espitia</a>
-	<a href="/karen">Karen Maldonado</a>
-	<a href="/juan">Juan Carlos Ruiz</a>
-</body>
+  <div>
+
+  </div>
+  <div class="bg-clip-border p-2 bg-slate-50 pt-6 md:p-8 text-center md:text-center space-y-4 dark:text-sky-900  ">
+    <h1 class="text-lg font-medium  text-3xl ">Bibliografías</h1>
+  </div>
+
+
+
+  <br>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 w-full">
+
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-80" src="{{url_for('static', filename='./img/karen/Foto.jpeg')}}" alt="Flower and sky" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          <a href="/karen">Karen Yised Maldonado Rincón</a>
+        </h3>
+      </div>
+    </div>
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-80" src="{{url_for('static', filename='./img/juan/foto.png')}}" alt="Flower and sky" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          <a href="/juan">Juan Carlos Ruiz Montaño</a>
+        </h3>
+      </div>
+    </div>
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-80" src="{{url_for('static', filename='./img/yadir/ft.png')}}" alt="Flower and sky" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          <a href="/yadir">Edilson Yadir Yomayuza Guzmán</a>
+        </h3>
+      </div>
+    </div>
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-80" src="{{url_for('static', filename='./img/emerson/Foto1.jpg')}}" alt="Flower and sky" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          <a href="/emerson">Emerson Judiño Pachon Ayala</a>
+        </h3>
+      </div>
+    </div>
+    <div class="shadow hover:shadow-md w-full bg-white rounded-lg overflow-hidden cursor-pointer">
+      <img class="object-cover w-full h-80" src="{{url_for('static', filename='./img/andres/perfil.jpeg')}}" alt="Flower and sky" />
+
+      <div class="relative p-4">
+        <h3 class="text-base md:text-xl font-medium text-gray-800">
+          <a href="/andres">Duvan Andres Espitia Santana</a>
+        </h3>
+      </div>
+    </div>
+  </div>
+
 </html>
