--- a/src/templates/indexPrueba.html
+++ b/src/templates/indexPrueba.html
@@ -19,10 +19,10 @@
 		<input type="password" name="password">
 		<input type="submit" value="Enviar">
 	</form>
-	<a href="/yadir">Yadir Yomayuza</a>
+	<!-- <a href="/yadir">Yadir Yomayuza</a>
 	<a href="/emerson">Emerson Pachon</a>
 	<a href="/andres">Andres Espitia</a>
 	<a href="/karen">Karen Maldonado</a>
-	<a href="/juan">Juan Carlos Ruiz</a>
+	<a href="/juan">Juan Carlos Ruiz</a> -->
 </body>
 </html>
