--- a/src/templates/indexPrueba.html
+++ b/src/templates/indexPrueba.html
@@ -19,6 +19,8 @@
 		<input type="password" name="password">
 		<input type="submit" value="Enviar">
 	</form>
+	<a href="update_user">Editar los usuarios</a>
+
 	<!-- <a href="/yadir">Yadir Yomayuza</a>
 	<a href="/emerson">Emerson Pachon</a>
 	<a href="/andres">Andres Espitia</a>
