--- a/src/templates/update_user.html
+++ b/src/templates/update_user.html
@@ -13,6 +13,7 @@
 	{%for user in users %}
 	<hr>
 	<form action="/update/{{user.name}}" method="POST">
+		<label for="">{{user._id}}</label>
 		<label for="name">Nombre</label>
 		<input type="text" name="name" value="{{user.name}}">
 		<label for="apellido">Apellido</label>
@@ -22,7 +23,7 @@
 		<label for="password">Contraseña</label>
 		<input type="password" name="password" value="{{user.password}}">
 		<button type="submit">Actualizar</button>
-		<a onclick="return confirm('Eliminar ?')" href="{{ url_for('delete', name=user.name)}}"> Delete </a>
+		<a onclick="return confirm('Eliminar ?')" href="{{ url_for('delete', _id=user._id)}}"> Delete </a>
 	</form>
 	<li id="name">Nombre: {{user.name}}</li>
 	<li>Apellido: {{user.apellido}}</li>
